--- a/navegacao/index.html
+++ b/navegacao/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Módulos</title>
-    <script src="script.js"></script>
+    <title>Inicial</title>
+    <link rel="stylesheet" href="./estilo/style.css" />
   </head>
   <body>
-    <h1>Módulos</h1>
+    <a href="./estilo/segundaPagina/segundaPagina.html">Segunda Página!</a>
+    <p><img src="exp1.png" alt="javascript" /></p>
   </body>
 </html>
-/* status add commit push */
