--- a/5 - JavaScript Moderno/9 - Tipos de Export/index.html
+++ b/5 - JavaScript Moderno/9 - Tipos de Export/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Módulos</title>
+    <title>Tipos de Export</title>
     <script src="script.js" type="module"></script>
   </head>
   <body>
-    <h1>Módulos 1</h1>
+    <h1>Tipos de Export no ESM</h1>
   </body>
 </html>
