Calc.js organizada em modulos

--- a/5 - JavaScript Moderno/10 - Calc.js Modulada/index.html
+++ b/5 - JavaScript Moderno/10 - Calc.js Modulada/index.html
@@ -13,7 +13,7 @@
     />
     <title>Calc.js - A calculadora que calcula</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="js/script.js" type="module" defer></script>
   </head>
   <body>
     <main data-theme="dark">
