--- a/9 - CSS Moderno/11 - Manipulando linhas e colunas/index.html
+++ b/9 - CSS Moderno/11 - Manipulando linhas e colunas/index.html
@@ -10,39 +10,58 @@
 
   <body>
     <div class="container">
-      <div class="item">
+      <div class="item item1">
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
           consequuntur nesciunt enim sed impedit labore vero quis?
         </p>
       </div>
-      <div class="item">
+      <div class="item item2">
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
           labore sed officiis aspernatur soluta, commodi mollitia iste dolores
           qui, deserunt quasi vero.
         </p>
       </div>
-      <div class="item">
+      <div class="item item3">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
           nihil facilis quasi praesentium?
         </p>
       </div>
-      <div class="item">
+      <div class="item item4">
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
           consequuntur nesciunt enim sed impedit labore vero quis?
         </p>
       </div>
-      <div class="item">
+      <div class="item item5">
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
           labore sed officiis aspernatur soluta, commodi mollitia iste dolores
           qui, deserunt quasi vero.
         </p>
       </div>
-      <div class="item">
+      <div class="item item6">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+          nihil facilis quasi praesentium?
+        </p>
+      </div>
+      <div class="item item7">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+          consequuntur nesciunt enim sed impedit labore vero quis?
+        </p>
+      </div>
+      <div class="item item8">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+          labore sed officiis aspernatur soluta, commodi mollitia iste dolores
+          qui, deserunt quasi vero.
+        </p>
+      </div>
+      <div class="item item9">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
           nihil facilis quasi praesentium?
