--- a/11 - Bootstrap/5 - Grid/index.html
+++ b/11 - Bootstrap/5 - Grid/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Botões</title>
     <!-- CSS Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -10,11 +11,13 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <style></style>
-
-    <title>Grid em Bootstrap</title>
   </head>
   <body>
+    <div class="container">
+      <button type="button" class="btn btn-success btn-lg">Primary</button>
+      <button type="button" class="btn btn-dark">Dark</button>
+    </div>
+
     <!-- JavaScript Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
