--- a/11 - Bootstrap/6 - Imagens/index.html
+++ b/11 - Bootstrap/6 - Imagens/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Botões</title>
+
     <!-- CSS Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -11,13 +11,28 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+    <style>
+      .titles {
+        background-color: red;
+        color: antiquewhite;
+      }
+      .btns {
+        background-color: aqua;
+      }
+    </style>
+
+    <title>Imagens em Bootstrap</title>
   </head>
   <body>
-    <div class="container">
-      <button type="button" class="btn btn-success btn-lg">Primary</button>
-      <button type="button" class="btn btn-dark">Dark</button>
+    <div class="titles container-fluid py-3 mx-5 d-flex">
+      <h1>Hello, World!</h1>
+      <h2>Hello</h2>
     </div>
-
+    <div class="btns container-fluid">
+      <button class="d-block">Olá</button>
+      <button>Tchau</button>
+    </div>
     <!-- JavaScript Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
