--- a/11 - Bootstrap/12 - Carrossel/index.html
+++ b/11 - Bootstrap/12 - Carrossel/index.html
@@ -19,7 +19,7 @@
         id="carouselExampleSlidesOnly"
         class="carousel slide mt-5"
         data-bs-ride="carousel"
-        style="width: 500px; margin = 0 auto;"
+        style="width: 500px; margin: 0 auto"
       >
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
