--- a/11 - Bootstrap/16 - Animações de Texto/index.html
+++ b/11 - Bootstrap/16 - Animações de Texto/index.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- CSS Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <!-- Animation Lib -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
+    <style>
+      body {
+        background-color: indigo;
+        color: white;
+        font-size: 40px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      .container {
+        min-height: 100vh;
+      }
+    </style>
     <title>Animação de Texto</title>
   </head>
   <body>
-    <!-- JavaScript Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <div data-aos="fade-down" class="container" data-aos-duration="3000">
+      <p>Olá Mundo</p>
+    </div>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-      var scrollSpy = new bootstrap.ScrollSpy(document.body, {
-        target: "#navbar-example",
-      });
+      AOS.init();
     </script>
   </body>
 </html>
