organização de arquivos e responsividade completos

--- a/11 - Bootstrap/17 - OneBitX/index.html
+++ b/11 - Bootstrap/17 - OneBitX/index.html
@@ -23,7 +23,6 @@
   </head>
   <body class="bg-danger">
     <div class="container-fluid container00 container01">
-      s
       <div class="container">
         <header class="header">
           <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
@@ -53,12 +52,13 @@
                       class="nav-link active"
                       aria-current="page"
                       href="/falcon9.html"
+                      id="navItem"
                       >FALCON 9</a
                     >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="/humamFlight.html"
-                      >HUMAN SPACE FLIGHT</a
+                    id="navItem">HUMAN SPACE FLIGHT</a
                     >
                   </li>
                 </ul>
@@ -67,28 +67,28 @@
           </nav>
         </header>
       </div>
-    </div>
-    <div class="container-fluid container00 container01">
+   
+    
       <div class="container titlePadding">
         <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
 
         <p class="h1">MISSÃO EQUIPE-3</p>
-        <button type="button" class="btn btn-outline-light mt-5">
+        <button type="button" class="btn btn-outline-light mt-5" id="button">
           SAIBA MAIS
         </button>
 
         <div class="container text-center">
-          <img src="images/home/arrowDown.gif" alt="arrow-down" />
+          <img src="images/home/arrowDown.gif" alt="arrow-down" class="arrowDown"/>
         </div>
       </div>
     </div>
-
+ </div>
     <div class="container-fluid container00 container02">
       <div class="container titlePadding">
         <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
 
         <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA TERRA</p>
-        <button type="button" class="btn btn-outline-light mt-5">
+        <button type="button" class="btn btn-outline-light mt-5" id="button">
           SAIBA MAIS
         </button>
       </div>
@@ -99,7 +99,7 @@
         <p class="h5">MISSÃO CONCLUÍDA</p>
 
         <p class="h1 shortTitle">DRAGON RETORNOU PARA TERRA</p>
-        <button type="button" class="btn btn-outline-light mt-5">
+        <button type="button" class="btn btn-outline-light mt-5" id="button">
           SAIBA MAIS
         </button>
       </div>
@@ -108,7 +108,7 @@
     <div class="container-fluid container00 container04">
       <div class="container titlePadding">
         <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS NA LUA</p>
-        <button type="button" class="btn btn-outline-light mt-5">
+        <button type="button" class="btn btn-outline-light mt-5" id="button">
           SAIBA MAIS
         </button>
       </div>
