--- a/11 - Bootstrap/17 - OneBitX/falcon9.html
+++ b/11 - Bootstrap/17 - OneBitX/falcon9.html
@@ -257,7 +257,7 @@
   </div>
 </div>
 
-<div id="carouselExampleCaptions" class="carousel slide carrosselSlide" data-bs-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel-slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
