css da ultima página feito

--- a/11 - Bootstrap/17 - OneBitX/falcon9.html
+++ b/11 - Bootstrap/17 - OneBitX/falcon9.html
@@ -328,7 +328,7 @@
 <div class="container-fluid text-center downloadDesc">
   <p data-aos="fade-right" data-aos-duration="1200"><span>Para mais informações sobre os serviçoes entre em
           contato
-          com</span> <a href="https://www.instagram.com/onebitcode/" target="blank">onebitcode@gmail.com</a></p>
+          com</span> <a href="https://www.instagram.com/onebitcode/" target="blank" class="emailObc">onebitcode@gmail.com</a></p>
 
 
   <button type="button" class="btn btn-outline-light p-3" data-aos="flip-left" data-aos-duration="1000">BAIXAR
