--- a/11 - Bootstrap/17 - OneBitX/index.html
+++ b/11 - Bootstrap/17 - OneBitX/index.html
@@ -13,7 +13,7 @@
     />
 
     <!-- Lib Text CSS -->
-
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
@@ -130,5 +130,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- Lib Text Script -->
+    <script src="https://unpkg.com/aos@next/dist/aos.css">
+    </script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
