animações e âncoras terminadas

--- a/11 - Bootstrap/17 - OneBitX/falcon9.html
+++ b/11 - Bootstrap/17 - OneBitX/falcon9.html
@@ -69,7 +69,7 @@
       </div>
    
     
-      <div class="container text-center titleContent">
+      <div class="container text-center titleContent" data-aos="fade-up" data-aos-duration="1500">
         <p class="h1 titleFalcon9">FALCON 9</p>
 
         <p class="h5 subTitleFalcon">PRIMEIRA CLASSE DE FOGUETES DE ÓRBITA CAPAZ DE VOLTAR A TERRA</p>
@@ -79,23 +79,23 @@
     <div class="container-fluid numbers">
       <div class="row text-center">
         <div class="col-sm col1">
-          <p class="h1 titleNumb">126</p>
-          <p class="subTitleNumb">LANÇAMENTOS FEITOS</p>
+          <p class="h1 titleNumb" data-aos="flip-up" data-aos-duration="1000">126</p>
+          <p class="subTitleNumb" data-aos="flip-up" data-aos-duration="1200">LANÇAMENTOS FEITOS</p>
         </div>
         <div class="col">
-          <p class="h1 titleNumb">86</p>
-          <p class="subTitleNumb">DESEMBARQUES TOTAIS</p>
+          <p class="h1 titleNumb" data-aos="flip-left" data-aos-duration="1000">86</p>
+          <p class="subTitleNumb" data-aos="flip-left" data-aos-duration="1250">DESEMBARQUES TOTAIS</p>
         </div>
         <div class="col-sm col3">
-          <p class="h1 titleNumb">68</p>
-          <p class="subTitleNumb">LANÇAMENTOS TOTAIS</p>
+          <p class="h1 titleNumb" data-aos="flip-right" data-aos-duration="1000">68</p>
+          <p class="subTitleNumb" data-aos="flip-right" data-aos-duration="1300">LANÇAMENTOS TOTAIS</p>
         </div>
       </div>
     </div>
 
     <div class="container-fluid container00 container06">
       <div class="container containerFalcon9Desc">
-        <p class="falcon9Desc">O Falcon 9 é um foguete reutilizável de dois estágios projetado e fabricado pela SpaceX para o
+        <p class="falcon9Desc" data-aos="fade-right" data-aos-duration="1500">O Falcon 9 é um foguete reutilizável de dois estágios projetado e fabricado pela SpaceX para o
           transporte confiável e seguro de pessoas e cargas úteis para a órbita da Terra e além. Falcon 9 é o
           primeiro foguete reutilizável de classe orbital do mundo. A capacidade de reutilização permite que a
           SpaceX refile as partes mais caras do foguete, o que, por sua vez, reduz o custo do acesso ao espaço.
@@ -342,9 +342,9 @@
     <footer class="container-fluid footer" id="footer">
       <span class="me-4 copyOBC">
         OneBitCode &copy; 2023
-        <a href="">Instagram</a>
-        <a href="">Twitter</a>
-        <a href="">LinkedIn</a>
+        <a href="https://instagram.com/juliano_almada" target="_blank">Instagram</a>
+        <a href="https://github.com/almadaj" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/juliano-almada" target="_blank">LinkedIn</a>
       </span>
     </footer>
 
@@ -355,8 +355,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Lib Text Script -->
-    <script src="https://unpkg.com/aos@next/dist/aos.css">
-    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
