--- a/11 - Bootstrap/17 - OneBitX/index.html
+++ b/11 - Bootstrap/17 - OneBitX/index.html
@@ -13,7 +13,7 @@
     />
 
     <!-- Lib Text CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
@@ -22,7 +22,7 @@
     <title>OneBitX | Home</title>
   </head>
   <body class="bg-danger">
-    <div class="container-fluid container00 container01">
+    <div class="container-fluid container00 container01" >
       <div class="container">
         <header class="header">
           <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
@@ -69,7 +69,8 @@
       </div>
    
     
-      <div class="container titlePadding">
+      <div
+      class="container titlePadding" data-aos="fade-right" data-aos-duration="1500">
         <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
 
         <p class="h1">MISSÃO EQUIPE-3</p>
@@ -84,7 +85,8 @@
     </div>
  </div>
     <div class="container-fluid container00 container02">
-      <div class="container titlePadding">
+      <div class="container titlePadding" data-aos="fade-right"
+      data-aos-duration="1500">
         <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
 
         <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA TERRA</p>
@@ -95,7 +97,8 @@
     </div>
 
     <div class="container-fluid container00 container03">
-      <div class="container titlePadding">
+      <div class="container titlePadding" data-aos="fade-down"
+      data-aos-duration="1500">
         <p class="h5">MISSÃO CONCLUÍDA</p>
 
         <p class="h1 shortTitle">DRAGON RETORNOU PARA TERRA</p>
@@ -106,7 +109,8 @@
     </div>
 
     <div class="container-fluid container00 container04">
-      <div class="container titlePadding">
+      <div class="container titlePadding" data-aos="fade-down-right"
+      data-aos-duration="1500">
         <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS NA LUA</p>
         <button type="button" class="btn btn-outline-light mt-5" id="button">
           SAIBA MAIS
@@ -117,9 +121,9 @@
     <footer class="container-fluid footer" id="footer">
       <span class="me-4 copyOBC">
         OneBitCode &copy; 2023
-        <a href="">Instagram</a>
-        <a href="">Twitter</a>
-        <a href="">LinkedIn</a>
+        <a href="https://instagram.com/juliano_almada" target="_blank">Instagram</a>
+        <a href="https://github.com/almadaj" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/juliano-almada" target="_blank">LinkedIn</a>
       </span>
     </footer>
 
@@ -130,8 +134,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Lib Text Script -->
-    <script src="https://unpkg.com/aos@next/dist/aos.css">
-    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
