--- a/12 - React/2 - JSX/index.html
+++ b/12 - React/2 - JSX/index.html
@@ -7,6 +7,7 @@
 
     <style>
       #app {
+        margin: 0;
         background-color: #7c7979;
         display: grid;
         font-family: sans-serif;
